--- a/source/sass/block/card.scss
+++ b/source/sass/block/card.scss
@@ -100,7 +100,7 @@ height:144px;
     height:144px;
   }
   .card-study{
-    height: 199px;
+    min-height: 199px;
     padding-bottom: 10px;
   }
   li.card-ad{
