--- a/source/pug/components/base/layout.pug
+++ b/source/pug/components/base/layout.pug
@@ -5,32 +5,32 @@ include ../components
 block variables
 
 html(lang="ua")
-  head
-    title= Вiдпустка
-    meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description", content="ProjectName — описание")
-    //- генерируйте favicon тут - https://realfavicongenerator.net/
-    //- в подключение фавикон манифеста обязательно добавьте строчки crossorigin="use-credentials"
-    //- используйте только для шрифта находящегося на первом экране
-    //- link(rel="preload", href="fonts/placeholder.woff2", as="font", crossorigin="anonymous")
-    //- При необходимости вы можете добавить разметку Open graf. - const Open graf = true
+    head
+        title= ТАТ
+        meta(charset="utf-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="description", content="ProjectName — описание")
+        link(rel="shortcut icon" href="/favicon.ico")
+        link(rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png" crossorigin="use-credentials")
+        link(rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png" crossorigin="use-credentials")
+        link(rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png" crossorigin="use-credentials")
+        link(rel="manifest" href="img/fav/site.webmanifest" crossorigin="use-credentials")
 
+        link(rel="preload", href="fonts/ProximaNova-Semibold.woff2", as="font", crossorigin="anonymous")
+        link(rel="stylesheet", href="css/style.min.css")
 
-    link(rel="stylesheet", href="css/style.min.css")
+    body
+        .wrapper(class=wrapperMods)
+            if (hasHeader)
+                +header(headerMods, currentUrl)
 
-  body
-    .wrapper(class=wrapperMods)
-      if (hasHeader)
-        +header(headerMods, currentUrl)
+            block main
 
-      block main
+            if (hasFooter)
+                +footer(footerMods)
 
-      if (hasFooter)
-        +footer(footerMods)
+        block modals
 
-    block modals
-
-    script(src="js/vendor.min.js")
-    script(src="js/main.min.js")
+        script(src="js/vendor.min.js")
+        script(src="js/main.min.js")
