--- a/source/sass/block/contacts.scss
+++ b/source/sass/block/contacts.scss
@@ -28,10 +28,12 @@
       width: 128px;
       height: 128px;
 
+
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 50%;
       }
     }
   }
